--- a/auto/ansible/tasks/net_ping.yml
+++ b/auto/ansible/tasks/net_ping.yml
@@ -1,5 +1,5 @@
 ---
 - name: Test network reachability.
   ansible.builtin.command:
-    cmd: "ping{{ version }} -c 1 -I {{ src }} {{ item }}"
+    cmd: "ping{{ version }} -l 2 -c 1 -I {{ src }} {{ item }}"
   loop: "{{ destinations }}"
