--- a/auto/ansible/network_provision_resolvers-vm.yml
+++ b/auto/ansible/network_provision_resolvers-vm.yml
@@ -7,5 +7,6 @@
     - ansible.builtin.import_tasks:
         file: tasks/network_provision.yml
 
+  handlers:
     - ansible.builtin.import_tasks:
-        file: tasks/finish_provisioning.yml
+        file: handlers/network_restart.yml
