--- a/auto/ansible/files/gateway/systemd.nftlb.service
+++ b/auto/ansible/files/gateway/systemd.nftlb.service
@@ -4,7 +4,7 @@ Documentation=man:nftlb(8) man:nft(8)
 
 [Service]
 Type=simple
-ExecStart=/usr/sbin/nftlb -6 -k "1234" -c /etc/nftlb.json
+ExecStart=/usr/sbin/nftlb -6 -k "1234" -l 7 -c /etc/nftlb.conf
 Restart=on-failure
 ProtectSystem=full
 ProtectHome=true
