--- a/auto/ansible/tasks/resolv.conf.yml
+++ b/auto/ansible/tasks/resolv.conf.yml
@@ -6,6 +6,7 @@
       src: ../files/resolv-with-8844
       dest: /etc/resolv.conf
       attr: "+i"
+    notify: restart_network
   rescue:
     - name: Make sure the file is mutable.
       ansible.builtin.file:
@@ -17,3 +18,4 @@
         src: ../files/resolv-with-8844
         dest: /etc/resolv.conf
         attr: "+i"
+      notify: restart_network
