--- a/auto/ansible/handlers/network_restart.yml
+++ b/auto/ansible/handlers/network_restart.yml
@@ -20,9 +20,15 @@
   listen: restart_network
   when: network_configuration.system == 'centos'
 
-- name: (NetBSD) Restart networking.
+- name: (NetBSD) Restart network.
   ansible.builtin.shell:
     cmd: /etc/rc.d/network restart
+  listen: restart_network
+  when: network_configuration.system == 'netbsd'
+
+- name: (NetBSD) Restart staticroute.
+  ansible.builtin.shell:
+    cmd: /etc/rc.d/staticroute restart
   listen: restart_network
   when: network_configuration.system == 'netbsd'
 
