--- a/auto/ansible/tasks/resolv.conf.yml
+++ b/auto/ansible/tasks/resolv.conf.yml
@@ -19,3 +19,18 @@
         dest: /etc/resolv.conf
         attr: "+i"
       notify: restart_network
+  when: network_configuration.system in ['linux', 'ubuntu', 'centos']
+
+- name: Set resolv.conf in FreeBSD/NetBSD.
+  block:
+  - name: Disable resolvconf.
+    ansible.builtin.copy:
+      content: 'resolvconf=NO\n'
+      dest: /etc/resolvconf.conf
+
+  - name: Write resolv.conf.
+    ansible.builtin.copy:
+      src: ../files/resolv-with-8844
+      dest: /etc/resolv.conf
+    notify: restart_network
+  when: network_configuration.system in ['freebsd', 'netbsd']
