--- a/auto/ansible/tasks/install_generic_packages.yml
+++ b/auto/ansible/tasks/install_generic_packages.yml
@@ -1,9 +1,9 @@
 ---
 - name: Use default task variables if not specified.
   ansible.builtin.set_fact:
-    pip_executable: "{{ pip_executable | default('pip3') }}"
-    pip_version: "{{ pip_version | default(false) }}"
-    system_ansible: "{{ system_ansible | default(true) }}"
+    pip_executable: "{{ whichpip | default('pip3') }}"
+    pip_version: "{{ pipversion | default(false) }}"
+    system_ansible: "{{ use_system_ansible | default(true) }}"
 
 - block:
   - name: (Linux) Install generic packages.
