--- a/auto/ansible/tasks/network_provision.yml
+++ b/auto/ansible/tasks/network_provision.yml
@@ -1,121 +1,7 @@
 ---
-- name: Linux network configuration.
-  block:
-  - name: (Linux) Configure interfaces.
-    ansible.builtin.template:
-      src: templates/linux_interfaces.j2
-      dest: /etc/network/interfaces
-    notify: restart_network
-
-  - name: (Linux) Check hostname.
-    ansible.builtin.shell:
-      cmd: "hostname"
-    register: hostname_out
-
-  - name: (Linux) Set hostname.
-    ansible.builtin.shell:
-      cmd: "hostname {{ inventory_hostname }}"
-    when: hostname_out.stdout != inventory_hostname
-
-  - ansible.builtin.import_tasks:
-      file: tasks/resolv.conf.yml
-  when: network_configuration.system == 'linux'
-
-- name: Ubuntu network configuration.
-  block:
-  - name: (Ubuntu) Configure interfaces.
-    ansible.builtin.template:
-      src: templates/ubuntu_netplan.j2
-      dest: /etc/netplan/01-netcfg.yaml
-    notify: restart_network
-
-  - name: (Ubuntu) Check hostname.
-    ansible.builtin.shell:
-      cmd: "hostname"
-    register: hostname_out
-
-  - name: (Ubuntu) Set hostname.
-    ansible.builtin.shell:
-      cmd: "hostname {{ inventory_hostname }}"
-    when: hostname_out.stdout != inventory_hostname
-
-  - ansible.builtin.import_tasks:
-      file: tasks/resolv.conf.yml
-  when: network_configuration.system == 'ubuntu'
-
-- name: FreeBSD network configuration.
-  block:
-  - name: (FreeBSD) Configure interfaces (in rc.conf).
-    ansible.builtin.template:
-      src: templates/freebsd_rc.conf.j2
-      dest: /etc/rc.conf
-    notify: restart_network
-
-  - ansible.builtin.import_tasks:
-      file: tasks/resolv.conf.yml
-
-  - name: (FreeBSD) Making boot faster; always autoboot.
-    ansible.builtin.copy:
-      content: 'autoboot_delay="-1"'
-      dest: /boot/loader.conf
-  when: network_configuration.system == 'freebsd'
-
-- name: NetBSD network configuration.
-  block:
-  - name: (NetBSD) Configure interfaces (PART I; in rc.conf).
-    ansible.builtin.template:
-      src: templates/netbsd_rc.conf.j2
-      dest: /etc/rc.conf
-    notify: restart_network
-
-  - name: (NetBSD) Configure interfaces (PART II; in distinct files).
-    ansible.builtin.template:
-      src: templates/netbsd_ifconfig.j2
-      dest: "/etc/ifconfig.{{item.name}}"
-    loop: "{{ network_configuration.networks }}"
-    notify: restart_network
-
-  - name: (NetBSD) Configure routing.
-    ansible.builtin.template:
-      src: templates/netbsd_route.conf.j2
-      dest: "/etc/route.conf"
-    notify: restart_network
-
-  - ansible.builtin.import_tasks:
-      file: tasks/resolv.conf.yml
-  when: network_configuration.system == 'netbsd'
-
-- name: CentOS network configuration.
-  block:
-  - name: (CentOS) Configure interfaces.
-    ansible.builtin.template:
-      src: templates/centos_ifcfg.j2
-      dest: "/etc/sysconfig/network-scripts/ifcfg-{{item.name}}"
-    loop: "{{ network_configuration.networks }}"
-    notify: restart_network
-
-  - name: (CentOS) Configure IPv4 routing.
-    ansible.builtin.template:
-      src: templates/centos_route.j2
-      dest: "/etc/sysconfig/network-scripts/route-{{item.name}}"
-    loop: "{{ network_configuration.networks }}"
-    notify: restart_network
-
-  - name: (CentOS) Configure IPv6 routing.
-    ansible.builtin.template:
-      src: templates/centos_route6.j2
-      dest: "/etc/sysconfig/network-scripts/route6-{{item.name}}"
-    loop: "{{ network_configuration.networks }}"
-    notify: restart_network
-
-      #- name: (CentOS) Disable NetworkManager.
-      #  ansible.builtin.systemd:
-      #    name: NetworkManager
-      #    enabled: false
-
-  - ansible.builtin.import_tasks:
-      file: tasks/resolv.conf.yml
-  when: network_configuration.system == 'centos'
+- ansible.builtin.include_tasks:
+    file: "tasks/network_provision_{{ network_configuration.system }}.yml"
+  when: network_configuration.system in ['linux', 'ubuntu', 'freebsd', 'netbsd', 'centos']
 
 - name: Unknown system; fail the playbook.
   ansible.builtin.fail:
