--- a/auto/ansible/provision_root-servers.yml
+++ b/auto/ansible/provision_root-servers.yml
@@ -26,3 +26,13 @@
         incept_copy_files:
           - tasks/read_build_configuration.yml
           - tasks/inception/read_inception_variables.yml
+
+    - name: Make sure the zone configuration directory is there.
+      ansible.builtin.file:
+        path:  "{{ ZONE_DIR }}"
+        state: directory
+
+    - name: Copy over zone configuration
+      ansible.posix.synchronize:
+        src: files/scenarios/
+        dest: "{{ ZONE_DIR }}"
