--- a/auto/ansible/tasks/network_provision_linux.yml
+++ b/auto/ansible/tasks/network_provision_linux.yml
@@ -5,7 +5,6 @@
     ansible.builtin.template:
       src: templates/linux_interfaces.j2
       dest: /etc/network/interfaces
-    notify: restart_network
 
   - name: (Linux) Check hostname.
     ansible.builtin.shell:
@@ -19,3 +18,6 @@
 
   - ansible.builtin.include_tasks:
       file: tasks/resolv.conf.yml
+
+  - ansible.builtin.include_tasks:
+      file: tasks/network_restart_linux.yml
