--- a/auto/ansible/tasks/network_provision_netbsd.yml
+++ b/auto/ansible/tasks/network_provision_netbsd.yml
@@ -5,20 +5,20 @@
     ansible.builtin.template:
       src: templates/netbsd_rc.conf.j2
       dest: /etc/rc.conf
-    notify: restart_network
 
   - name: (NetBSD) Configure interfaces (PART II; in distinct files).
     ansible.builtin.template:
       src: templates/netbsd_ifconfig.j2
       dest: "/etc/ifconfig.{{item.name}}"
     loop: "{{ network_configuration.networks }}"
-    notify: restart_network
 
   - name: (NetBSD) Configure routing.
     ansible.builtin.template:
       src: templates/netbsd_route.conf.j2
       dest: "/etc/route.conf"
-    notify: restart_network
 
   - ansible.builtin.include_tasks:
       file: tasks/resolv.conf.yml
+
+  - ansible.builtin.include_tasks:
+      file: tasks/network_restart_netbsd.yml
