--- a/auto/ansible/tasks/network_provision_ubuntu.yml
+++ b/auto/ansible/tasks/network_provision_ubuntu.yml
@@ -5,7 +5,6 @@
     ansible.builtin.template:
       src: templates/ubuntu_netplan.j2
       dest: /etc/netplan/01-netcfg.yaml
-    notify: restart_network
 
   - name: (Ubuntu) Check hostname.
     ansible.builtin.shell:
@@ -19,3 +18,6 @@
 
   - ansible.builtin.include_tasks:
       file: tasks/resolv.conf.yml
+
+  - ansible.builtin.include_tasks:
+      file: tasks/network_restart_ubuntu.yml
