--- a/auto/ansible/provision_root-servers.yml
+++ b/auto/ansible/provision_root-servers.yml
@@ -15,10 +15,10 @@
 
     - name: Make sure the zone configuration directory is there.
       ansible.builtin.file:
-        path:  "{{ ZONE_DIR }}"
+        path: "{{ ZONE_DIR }}"
         state: directory
 
-    - name: Copy over zone configuration
+    - name: Copy over zone configuration.
       ansible.posix.synchronize:
         src: files/scenarios/
         dest: "{{ ZONE_DIR }}"
