Provision loadbalancer with actual root-server IPs

--- a/auto/ansible/provision_gateway_loadbalancer.yml
+++ b/auto/ansible/provision_gateway_loadbalancer.yml
@@ -1,8 +1,5 @@
 ---
 # This playbook configures the gateway-vm to do loadbalancing;
-# All queries for the a root (a.some-servers.p53, 172.21.101.1), will
-# be round-robin load-balanced over the 12 other roots
-# XXX: not currently used; still developing.
 - hosts: gateway-vm
   gather_facts: false
   become: true
@@ -11,7 +8,7 @@
     - name: Copy loadbalance configuration.
       ansible.builtin.template:
         src: templates/full_loadbalance_file.json.j2
-        dest: /etc/nftlb.json
+        dest: /etc/nftlb.conf
 
     - name: Install nftlb package
       ansible.builtin.apt:
@@ -23,7 +20,7 @@
 
     - name: Override startup service to use configuration
       ansible.builtin.copy:
-        src: files/loadbalancer/systemd.nftlb.service
+        src: files/gateway/systemd.nftlb.service
         dest: /lib/systemd/system/nftlb.service
 
     - name: Restart the service
