--- a/auto/ansible/vagrant_fast_up.yml
+++ b/auto/ansible/vagrant_fast_up.yml
@@ -86,6 +86,8 @@
         cmd: "vagrant up --no-provision {{ host_name }}"
         # This is relative to the playbook.
         chdir: ../
+      register: result
+      until: result is succeeded
       retries: 2
       delay: 1
       delegate_to: localhost
@@ -113,6 +115,8 @@
         cmd: "vagrant up --no-provision {{ host_name }}"
         # This is relative to the playbook.
         chdir: ../
+      register: result
+      until: result is succeeded
       retries: 2
       delay: 1
       delegate_to: localhost
