--- a/auto/ansible/tasks/install_server_packages.yml
+++ b/auto/ansible/tasks/install_server_packages.yml
@@ -4,19 +4,19 @@
     pkg: "{{ server_packages }}"
     state: present
     update_cache: yes
-  when: network_configuration.system in ['linux', 'ubuntu']
+  when: system.package in ['linux', 'ubuntu']
 
 - name: (FreeBSD) Install packages for building.
   community.general.pkgng:
     name: "{{ server_packages }}"
     state: present
-  when: network_configuration.system == 'freebsd'
+  when: system.package == 'freebsd'
 
 - name: (NetBSD) Install packages for building.
   community.general.pkgin:
     name: "{{ server_packages }}"
     state: present
-  when: network_configuration.system == 'netbsd'
+  when: system.package == 'netbsd'
 
 - block:
   - name: (CentOS) Install EPEL.
@@ -31,9 +31,9 @@
       state: present
       enablerepo: "{{ enablerepo }}"
 
-  when: network_configuration.system == 'centos'
+  when: system.package == 'centos'
 
 - name: Unknown system; fail the playbook.
   ansible.builtin.fail:
     msg: "Unknown system! Cannot install packages!"
-  when: "network_configuration.system not in ['linux', 'ubuntu', 'freebsd', 'netbsd', 'centos']"
+  when: "system.package not in ['linux', 'ubuntu', 'freebsd', 'netbsd', 'centos']"
