--- a/auto/ansible/tasks/resolv.conf.yml
+++ b/auto/ansible/tasks/resolv.conf.yml
@@ -17,7 +17,7 @@
         src: ../files/resolv-with-8844
         dest: /etc/resolv.conf
         attr: "+i"
-  when: network_configuration.system in ['linux', 'ubuntu', 'centos']
+  when: system.network in ['linux', 'ubuntu', 'centos']
 
 - name: Set resolv.conf in FreeBSD/NetBSD.
   block:
@@ -30,4 +30,4 @@
     ansible.builtin.copy:
       src: ../files/resolv-with-8844
       dest: /etc/resolv.conf
-  when: network_configuration.system in ['freebsd', 'netbsd']
+  when: system.network in ['freebsd', 'netbsd']
